hphp/test/slow/finally/new_try_catch_003.php.expectf
1
1
1
1
1
2
1
1
3
1
1
3
5
1
2
1
1
2
2
1
2
3
1
2
3
5
1
3
1
1
3
2
1
3
3
1
3
3
5
2
1
1
2
1
2
2
1
3
2
1
3
5
2
2
1
2
2
2
4
2
2
2
5
2
2
2
6
HipHop Fatal error: Uncaught exception 'Exception' with message '7' in %s/test/slow/finally/new_try_catch_003.php:17
Stack trace:
#0 %s/test/slow/finally/new_try_catch_003.php(%s): blah()
#1 {main}
